# BENJAMIN

./: .env.example  .gitignore  3.0.0  Makefile  README.md  pyproject.toml  requirements.txt
apps/api/: deps.py  main.py  routes_approvals.py  routes_chat.py  routes_jobs.py  routes_memory.py  routes_tasks.py
apps/worker/: scheduler.py  worker.py
benjamin/: README.md  pyproject.toml
benjamin/apps/api/: main.py  routes_chat.py
benjamin/core/models/: __init__.py  llm.py
benjamin/core/observability/: trace.py
benjamin/core/orchestration/: executor.py  orchestrator.py  planner.py  policies.py  schemas.py
benjamin/core/skills/: base.py  registry.py
benjamin/core/skills/builtin/: filesystem.py  web_search.py
benjamin/tests/: test_chat_endpoint.py  test_orchestrator_filesystem.py  test_planner_fallback.py  test_planner_mocked.py  test_skill_registry.py
config/: config.yaml  loader.py  logging.yaml
core/approvals/: schemas.py  service.py  store.py
core/memory/: episodic.py  manager.py  retrieval.py  schemas.py  semantic.py  write_policy.py
core/notifications/: notifier.py
core/observability/: metrics.py  trace.py
core/orchestration/: executor.py  orchestrator.py  planner.py  policies.py  schemas.py
core/scheduler/: jobs.py
core/skills/: registry.py
docs/: RUNBOOK.md  style_guide.md
infra/: alembic.ini  docker-compose.yml
infra/migrations/: README.md
jarvis/: __init__.py  chat_app.py  config.py  core_controller.py  main.py
jarvis/interfaces/: chat_interface.py  terminal_interface.py  voice_interface.py
jarvis/learning/: reinforcement.py
rasa/: config.yml  domain.yml
scripts/: check.py  dev.ps1  dev.sh  doctor.py  run_benjamin.sh  run_jarvis.sh  test.py  train_rasa_nlu.py  train_rl.py
tests/: conftest.py  requirements.txt  test_approvals_api_flow.py  test_approvals_store.py  test_auth.py  test_breaker_persistence.py  test_breaker_state_machine.py  test_calendar_create_event_approval_flow.py  test_calendar_skill_search_mocked.py  test_chat_persists_task_record.py  test_config_loader.py  test_conversation.py  test_daily_briefing_includes_calendar_gmail_when_mocked.py  test_daily_briefing_job.py  test_daily_briefing_llm_summary.py  test_discord_notifier_http_failure_graceful.py  test_doctor_compact_tasks_respects_max.py  test_doctor_detects_and_repairs_corrupt_jsonl.py  test_doctor_reports_ok_on_empty_state.py  test_email_reader.py  test_executor_creates_approval.py  test_file_manager.py  test_gmail_draft_email_approval_flow.py  test_gmail_search_rewrite_path.py  test_gmail_skill_search_and_thread_summary_mocked.py  test_healthz_full.py  test_healthz_full_ping_cached.py  test_http_retry.py  test_idempotent_approval_double_approve.py  test_idempotent_rule_propose_step_no_duplicate.py  test_imports.py  test_integrations_status.py  test_jobs_api.py  test_llm_degraded_fallback.py  test_logging_file_rotation_configured.py  test_logging_json_format.py  test_logging_setup_idempotent.py  test_maintenance_api.py  test_memory_episodic_append_list.py  test_memory_policy.py  (+35 more)
workspace/BENJAMIN/: README.md  pyproject.toml  requirements.txt
workspace/BENJAMIN/config/: config.yaml  logging.yaml
workspace/BENJAMIN/jarvis/: __main__.py  config.py  main.py
workspace/BENJAMIN/jarvis/interfaces/: terminal_interface.py
workspace/BENJAMIN/jarvis/learning/: user_pattern.py
workspace/BENJAMIN/jarvis/memory/: long_term.py  short_term.py  vector_store.py
workspace/BENJAMIN/jarvis/nlu/: dialogue_manager.py  intent_recognizer.py
workspace/BENJAMIN/jarvis/skills/: coding_helper.py  file_manager.py  info_query.py  scheduler.py  smart_home.py
workspace/BENJAMIN/jarvis/utils/: helpers.py  logger.py
workspace/BENJAMIN/scripts/: train_nlu.py  train_rl.py  train_spacy_nlu.py
workspace/BENJAMIN/tests/: test_file_manager.py  test_memory.py
(+140 files in other folders)
