[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "BENJAMIN"
version = "0.1.0"
description = "Jarvis-style personal assistant supporting voice and terminal interaction"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=5.4",
    "SpeechRecognition>=3.8.1",
    "vosk>=0.3.45",
    "whisper-client>=0.1.0",
    "pyttsx3>=2.90",
    "Coqui-TTS>=0.22.1",
    "spacy>=3.5.0",
    "apscheduler>=3.9.1",
    "sqlalchemy>=1.4",
    "faiss-cpu>=1.7.3",
    "sentence-transformers>=2.2.2",
    "numpy>=1.21.0",
    "stable-baselines3>=2.1.0",
    "networkx>=3.1",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "phue==1.1",
    "pywemo>=0.6.0",
    "pytest>=7.2.0",
    "python-dotenv>=0.21.0",
    "openai>=1.0.0",
    "rasa>=3.1",
    "pydantic>=1.10",
    "redis>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "openai",
    "PyYAML",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv"
